# RealityLog

./: .gitignore  AGENTS.md  Cargo.toml  README.md
crates/anchor/: Cargo.toml
crates/anchor/src/: main.rs
crates/core/: Cargo.toml
crates/core/src/: lib.rs  merkle.rs  types.rs
crates/logd/: Cargo.toml
crates/logd/src/: main.rs
data/: entries.json  leaves.json
web/verifier-ext/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
web/verifier-ext/src/: main.ts  style.css
web/wasm-core/: Cargo.toml
web/wasm-core/src/: lib.rs
