[workspace]
members = [
    "crates/core",
    "crates/logd",
    "crates/anchor",
    "web/wasm-core"
]
resolver = "2"

[workspace.package]
edition = "2021"
version = "0.1.0"
authors = ["RealityLog Contributors"]
license = "MIT"

[workspace.dependencies]
anyhow = "1.0"
axum = { version = "0.7", default-features = false, features = ["json", "tokio", "http1"] }
hex = "0.4"
chrono = { version = "0.4", features = ["serde"] }
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
thiserror = "1.0"
tokio = { version = "1.39", features = ["macros", "rt-multi-thread", "time", "signal", "fs", "sync", "net"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
wasm-bindgen = "0.2"
