[package]
name = "reality-anchor"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
sha2.workspace = true
reality-core = { path = "../core" }

# needed for OffsetDateTime
time = { version = "0.3", features = ["formatting"] }

hex.workspace = true
