[package]
name = "reality-wasm-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
reality-core = { path = "../../crates/core" }
serde.workspace = true
serde_json.workspace = true
wasm-bindgen.workspace = true

[features]
default = []
